...

    var body: some View {
        TabView(selection: $selectedTab) { // Bind TabView to selectedTab
            BreakingArsenalView()
                .tabItem {
                    Label {
                        Text("Arsenal").font(.ibmPlexMono(size: 12))
                    } icon: {
                        Image(systemName: "book.closed")
                    }
                }
                .tag(TabSelection.arsenal) // Add tag
                .accessibilityLabel("Breaking Arsenal")
                .accessibilityHint("View your collection of breaking moves")

            AddMoveContainer(selectedTab: $selectedTab) // Pass binding to AddMoveContainer
                .tabItem {
                    Label {
                        Text("Add").font(.ibmPlexMono(size: 12))
                    } icon: {
                        Image(systemName: "plus.app")
                    }
                }
                .tag(TabSelection.add) // Add tag
                .accessibilityLabel("Add Move")
...
